--- a/style.css
+++ b/style.css
@@ -339,3 +339,30 @@
     color: #EF233C;
 
 }
+
+footer {
+    text-align: center;
+    background-color: #0B0D17;
+    padding: 60px;
+}
+
+footer h2 {
+    font-family: 'Lobster', cursive;
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 44px;
+    letter-spacing: 0.5px;
+    color: #EF233C;
+
+}
+
+footer p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    color: #D9DBE1;
+
+
+}
